--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <body class="body--index">
   <%- include("partials/header") %>
   <main class="main main--index">
-    <img src="/images/img-home-banner.jpg" alt="" class="img igm--banner">
+    <img src="/images/img-home-banner.jpg" alt="" class="img img--banner">
     <section class="ultimas-compras">
       <h2 class="title title--compras">basado en tu última visita</h2>
       <ul class="list list--compras">
