--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,22 +24,22 @@
         <li class="item item--nav">
           <a href="#" class="btn btn--nav">ofertas</a>
         </li>
-        <li class="item item--nav"><a href="#" class="btn btn--nav">tiendas oficiasl</a></li>
+        <li class="item item--nav"><a href="#" class="btn btn--nav">tiendas oficiales</a></li>
         <li class="item item--nav"><a href="#" class="btn btn--nav">vender</a></li>
         <li class="item item--nav"><a href="#" class="btn btn--nav">ayuda</a></li>
       </ul>
       <ul class="list list--user">
         <li class="item item--user">
-          <i class="far fa-address-card"></i>
           <a href="#" class="btn btn--user">crea tu cuenta</a>
+          <i class="far fa-address-card"></i>
         </li>
         <li class="item item--user">
-          <i class="fas fa-sign-in-alt"></i>
           <a href="#" class="btn btn--user">ingresá</a>
+          <i class="fas fa-sign-in-alt"></i>
         </li>
         <li class="item item--user">
-          <i class="fas fa-shopping-basket"></i>
           <a href="#" class="btn btn--user">mis compras</a>
+          <i class="fas fa-shopping-basket"></i>
         </li>
       </ul>
     </nav>
